final mapper. fixed tests.
fixed vulnerabilities, paths

fixed vulnerabilities 3

added mapper to icon

fixed tests

finalized getIcon algorythm. fixed vulnerabilities

before squash

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "express-validator": "^6.4.0"
     },
     "devDependencies": {
-        "jest": "^25.1.0",
-        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2"
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+        "jest": "^25.3.0"
     }
 }
